fix c++ version for openmesh

--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -36,6 +36,7 @@ ExternalProject_Add(
                -DBUILD_APPS=FALSE
                -DOPENMESH_BUILD_SHARED=FALSE
                -DCMAKE_BUILD_TYPE=RELEASE
+               -DCMAKE_CXX_STANDARD=17
 )
 
 ################################################################################
