--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,7 @@
 name = "polyhedral_net_splines"
 version = "0.1.0"
 requires-python = ">=3.7"
+readme = "python/README.md"
 
 [build-system]
 requires = [
