seperate OpenMesh binary for shared library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,10 +62,10 @@ ExternalProject_Add(
     GIT_TAG f13a3bf79f8dc91cd453b74baa9dc6f97a5a3062
     CMAKE_ARGS -DCMAKE_INSTALL_PREFIX:PATH=<INSTALL_DIR>
                -DBUILD_APPS=FALSE
-               -DOPENMESH_BUILD_SHARED=FALSE
+               -DOPENMESH_BUILD_SHARED=${BUILD_SHARED_LIBS}
                -DCMAKE_CXX_STANDARD=17
                -DCMAKE_TOOLCHAIN_FILE=${CMAKE_TOOLCHAIN_FILE}
-               -DBUILD_SHARED_LIBS=FALSE
+               -DBUILD_SHARED_LIBS=${BUILD_SHARED_LIBS}
                -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}
                -DCMAKE_CXX_FLAGS=${CMAKE_CXX_FLAGS}
                -DCMAKE_EXE_LINKER_FLAGS=${CMAKE_EXE_LINKER_FLAGS}
